--- a/Proyecto_Jugadores/nbproject/project.properties
+++ b/Proyecto_Jugadores/nbproject/project.properties
@@ -29,7 +29,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${reference.Cronometro.jar}:\
+    ${reference.ComponenteTemporizador.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -59,6 +61,10 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.ComponenteTemporizador=../../../ComponenteTemporizador
+project.Cronometro=../../../Cronometro
+reference.ComponenteTemporizador.jar=${project.ComponenteTemporizador}/dist/ComponenteTemporizador.jar
+reference.Cronometro.jar=${project.Cronometro}/dist/Cronometro.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
