Todas las funcionalidades funcionan correctamente, fata validar formularios

--- a/Proyecto_Jugadores/nbproject/project.properties
+++ b/Proyecto_Jugadores/nbproject/project.properties
@@ -31,7 +31,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.Cronometro.jar}:\
-    ${reference.ComponenteTemporizador.jar}
+    ${reference.ComponenteTemporizador.jar}:\
+    ${reference.RelojDigital.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,8 +64,10 @@ mkdist.disabled=false
 platform.active=default_platform
 project.ComponenteTemporizador=../../../ComponenteTemporizador
 project.Cronometro=../../../Cronometro
+project.RelojDigital=../../../RelojDigital/RelojDigital
 reference.ComponenteTemporizador.jar=${project.ComponenteTemporizador}/dist/ComponenteTemporizador.jar
 reference.Cronometro.jar=${project.Cronometro}/dist/Cronometro.jar
+reference.RelojDigital.jar=${project.RelojDigital}/dist/RelojDigital.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
