Todo funciona, falta hacer pruebas de uso.

--- a/Proyecto_Jugadores/nbproject/project.properties
+++ b/Proyecto_Jugadores/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Proyecto_Corredores
+application.vendor=Ovejo
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,13 +27,13 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/Proyecto_Corredores.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${reference.Cronometro.jar}:\
-    ${reference.ComponenteTemporizador.jar}:\
-    ${reference.RelojDigital.jar}
+    ${reference.RelojDigital.jar}:\
+    ${libs.ValidationLib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,11 +63,7 @@ manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
-project.ComponenteTemporizador=../../../ComponenteTemporizador
-project.Cronometro=../../../Cronometro
 project.RelojDigital=../../../RelojDigital/RelojDigital
-reference.ComponenteTemporizador.jar=${project.ComponenteTemporizador}/dist/ComponenteTemporizador.jar
-reference.Cronometro.jar=${project.Cronometro}/dist/Cronometro.jar
 reference.RelojDigital.jar=${project.RelojDigital}/dist/RelojDigital.jar
 run.classpath=\
     ${javac.classpath}:\
