--- a/Proyecto_Jugadores/nbproject/project.properties
+++ b/Proyecto_Jugadores/nbproject/project.properties
@@ -33,7 +33,7 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${reference.RelojDigital.jar}:\
-    ${libs.ValidationLib.classpath}
+    ${libs.ValidacionLib.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
